; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_network.c_network_accuracies.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_network.c_network_accuracies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@network_accuracies.acc = internal global [2 x float] zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float* @network_accuracies(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store i32 %1, i32* %8, align 4
  store i32* %0, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @network_predict_data(i32* %9, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call float @matrix_topk_accuracy(i32 %14, i32 %15, i32 1)
  store float %16, float* getelementptr inbounds ([2 x float], [2 x float]* @network_accuracies.acc, i64 0, i64 0), align 4
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call float @matrix_topk_accuracy(i32 %18, i32 %19, i32 %20)
  store float %21, float* getelementptr inbounds ([2 x float], [2 x float]* @network_accuracies.acc, i64 0, i64 1), align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @free_matrix(i32 %22)
  ret float* getelementptr inbounds ([2 x float], [2 x float]* @network_accuracies.acc, i64 0, i64 0)
}

declare dso_local i32 @network_predict_data(i32*, i32) #1

declare dso_local float @matrix_topk_accuracy(i32, i32, i32) #1

declare dso_local i32 @free_matrix(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
